@@ -1,3 +1,8 @@
+1/8/2009
+- Added Test:Unit tests to generator
+- added missing oauth_clients/edit.html.erb view template
+- added missing :oauth_clients resource route in USAGE
+
 6/23/2008
 
 - Split OAuth controller into two parts: OAuth and OAuth clients. [jcrosby]
